--- a/ProyectoTISJ-war/web/loginRol.xhtml
+++ b/ProyectoTISJ-war/web/loginRol.xhtml
@@ -2,55 +2,67 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:p="http://xmlns.jcp.org/jsf/passthrough"
-      xmlns:f="http://xmlns.jcp.org/jsf/core" >
+      xmlns:func="http://interfaz/functions"
+      xmlns:f="http://xmlns.jcp.org/jsf/core" 
+      xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
     <h:head>
-        <link rel="stylesheet" href="./Resources/CSS/Base.css" />
         <link rel="stylesheet" href="./Resources/CSS/login.css" />
         <link rel="stylesheet" href="./Resources/CSS/Mensajes.css" />
-        <script src="Resources/Scripts/jquery-1.11.3.min.js"></script>
-        <script src="Resources/Scripts/SelecRadioButton.js"></script>
-        <title>Login</title>      
+        <script src="./Resources/Scripts/jquery-1.11.3.min.js"></script>
+        <title>Rol</title>      
     </h:head>
     <h:body>        
         <h:form id="login" style="text-align: center" rendered="#{!login.usuarioLogueado}">
             <span style="text-align: center;">
-                <h:messages class="error" />
+                <h:messages id="msj" class="error" />
             </span>            
             <div id="linea">
                 <div id="titulo">
                     <img src="./Resources/Images/lock.png"/><br/>
-                    Login
+                    Seleccionar un rol
                 </div>
-                <div id="contenedor">
+                <div id="contenedor">                     
                     <div id="contenedorBotones">
-                        <div class="menuOpcion" name="Estudiante" style="text-align: center" >
-                            <div class="textoMenuOpcion">Estudiante</div>
-                            <img src="./Resources/Images/estudiante.png" width="100" height="100" alt="edit"/>
-                            <div class="imagenMenuOpcion"></div>
-                        </div>
-                        <div class="menuOpcion" name="Docente" style="text-align: center">
-                            <div class="textoMenuOpcion">Docente</div>
-                            <img src="./Resources/Images/docente.png" width="100" height="100" alt="edit"/>
-                            <div class="imagenMenuOpcion"></div>
-                        </div>
-                        <div class="menuOpcion" name="Administrativo" style="text-align: center">
-                            <div class="textoMenuOpcion">Administrativo</div>
-                            <img src="./Resources/Images/administrativo.png" width="100" height="100" alt="edit"/>
-                            <div class="imagenMenuOpcion"></div>
-                        </div>
-                        <div class="menuOpcion clickeado" name="Administrador" style="text-align: center">
-                            <div class="textoMenuOpcion">Administrador</div>
-                            <img src="./Resources/Images/administrador.png" width="100" height="100" alt="edit"/>
-                            <div class="imagenMenuOpcion imagenMenuOpcionClick"></div>
-                        </div>
-                    </div>                        
-                    <h:commandButton type="submit" class="botonLogin" value="Ingresar" action="#{login.login()}"/>
+                        <h:panelGroup rendered="#{ func:contains(login.rolesUsuario, 'Estudiante')}">
+                            <h:commandLink action="#{login.loginRol('Estudiante')}">
+                            <div class="menuOpcion" name="Estudiante" style="text-align: center" >
+                                <div class="textoMenuOpcion">Estudiante</div>
+                                <img src="./Resources/Images/estudiante.png" width="100" height="100" alt="edit"/>
+                                <div class="imagenMenuOpcion"></div>
+                            </div>
+                        </h:commandLink>
+                        </h:panelGroup>
+                        <h:panelGroup rendered="#{ func:contains(login.rolesUsuario, 'Docente')}">
+                            <h:commandLink action="#{login.loginRol('Docente')}">
+                            <div class="menuOpcion" name="Docente" style="text-align: center">
+                                <div class="textoMenuOpcion">Docente</div>
+                                <img src="./Resources/Images/docente.png" width="100" height="100" alt="edit"/>
+                                <div class="imagenMenuOpcion"></div>
+                            </div>
+                            </h:commandLink>
+                        </h:panelGroup>
+                        <h:panelGroup rendered="#{ func:contains(login.rolesUsuario, 'Administrativo')}">
+                            <h:commandLink action="#{login.loginRol('Administrativo')}">
+                            <div class="menuOpcion" name="Administrativo" style="text-align: center">
+                                <div class="textoMenuOpcion">Administrativo</div>
+                                <img src="./Resources/Images/administrativo.png" width="100" height="100" alt="edit"/>
+                                <div class="imagenMenuOpcion"></div>
+                            </div>
+                            </h:commandLink>
+                        </h:panelGroup>
+                        <h:panelGroup rendered="#{ func:contains(login.rolesUsuario, 'Administrador')}">
+                            <h:commandLink action="#{login.loginRol('Administrador')}">
+                            <div class="menuOpcion" name="Administrador" style="text-align: center">
+                                <div class="textoMenuOpcion">Administrador</div>
+                                <img src="./Resources/Images/administrador.png" width="100" height="100" alt="edit"/>
+                                <div class="imagenMenuOpcion"></div>
+                            </div>
+                            </h:commandLink>
+                        </h:panelGroup>
+                    </div>
                 </div>
             </div>
-            <h:selectOneRadio class="escondido" id="opcion" value="#{login.rolSeleccionado}">
-                <f:selectItems value="#{login.roles}"/>                                    
-            </h:selectOneRadio>
+            
         </h:form>  
         <h:form rendered="#{login.usuarioLogueado}">
             <h:outputText value="Ya estas logueado"/>
