Se comenzo con implementacion de creacion de curso.

--- a/ProyectoTISJ-war/web/Administrador/AdministradorMenu.xhtml
+++ b/ProyectoTISJ-war/web/Administrador/AdministradorMenu.xhtml
@@ -64,7 +64,7 @@
             <div class="navDivider"></div>
             
             <h:form rendered="#{login.usuarioLogueado}">
-                <h:commandLink type="submit" action="#{login.logout()}">
+                <h:commandLink action="#{login.logout()}">
                     <div class="navOptMenu">
                         Salir
                     </div>
