--- a/ProyectoTISJ-war/web/Asignatura/RegistrarAsignatura.xhtml
+++ b/ProyectoTISJ-war/web/Asignatura/RegistrarAsignatura.xhtml
@@ -29,7 +29,7 @@
                     </div><h:message class="error" for="inputCreditos"/>
                         
                     <div class="menuOpcion" style="display: block;">
-                        <h:commandLink type="submit" action="#{datosAsignaturaBean.registrarAsignatura()}">
+                        <h:commandLink action="#{datosAsignaturaBean.registrarAsignatura()}">
                             <div class="boton "> <img src="../Resources/Images/siguiente.png" class="butonIcon"/> Registrar</div>
                         </h:commandLink>
                         <h:commandButton type="reset">
