Se agraron los metodos en Facade, Controlador y Manejador de Curso para listar los cursos de un docente segun su id.

--- a/ProyectoTISJ-war/web/Docente/DocenteMenu.xhtml
+++ b/ProyectoTISJ-war/web/Docente/DocenteMenu.xhtml
@@ -17,12 +17,6 @@
                 (Docente)
             </div>
         </div>
-        <div class="navDivider"></div>
-        <a href="">
-            <div class="navOptMenu">
-                Docente
-            </div>
-        </a>
         
         <div class="navDivider"></div>
         <a href="">
@@ -34,7 +28,7 @@
         <div class="navDivider"></div>
         <a href="">
             <div class="navOptMenu">
-                Asignaturas
+                Cursos
             </div>
         </a>
         
