--- a/ProyectoTISJ-war/web/Docente/DocenteMenu.xhtml
+++ b/ProyectoTISJ-war/web/Docente/DocenteMenu.xhtml
@@ -26,7 +26,7 @@
         </a>
         
         <div class="navDivider"></div>
-        <a href="">
+        <a href="../Curso/ListarCursos.xhtml">
             <div class="navOptMenu">
                 Cursos
             </div>
