--- a/ProyectoTISJ-war/web/Administrador/AdministradorMenu.xhtml
+++ b/ProyectoTISJ-war/web/Administrador/AdministradorMenu.xhtml
@@ -3,6 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
+
     <ui:composition>
         <div class="nav"> 
             <div class="navHeader">
@@ -48,10 +49,18 @@
             </a>
             
             <div class="navDivider"></div>
-            <a href="../Asignatura/ListarAsignaturas.xhtml">
+            <a href="javascript:toggle_visibility('listar');">
                 <div class="navOptMenu">
-                    Asignaturas
+                    Asignaturas                    
                 </div>
+                <div id="listar" class="navOptMenu" style="display: none; font-size: 10pt;">
+                    <a href="../Asignatura/ListarAsignaturas.xhtml">
+                        Listar Asignaturas
+                    </a><br/>
+                    <a href="../Asignatura/RegistrarAsignatura.xhtml">
+                        Registrar Asignaturas
+                    </a>   
+                </div>                
             </a>
             
             <div class="navDivider"></div>
